k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
  namespace: simplest-project
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: registry.oak.initsw.dev/mtb/gateway
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "1024Mi"
              cpu: "2000m"
