k8s/gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: simplest-project
spec:
  ports:
  - name: gateway
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: gateway
  type: ClusterIP
