k8s/greetings-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: greetings-api
  namespace: simplest-project
spec:
  ports:
  - name: greetings-api
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: greetings-api
  type: ClusterIP
